Fix nav bar spacing and functionality

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,9 @@ body {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
-.nav {
+nav {
+    height: 25px;
+    width: 35%;
     background-color: #04030F;
     padding: 10px;
     font-size: 0.7rem;
@@ -15,7 +17,8 @@ body {
     height: 25px;
     width: 25px;
     padding: 5px;
-
+    margin: 10px;
+    display: inline-block;
 }
 
 .thumbnail {
